Fix separator alignment by switching margin shorthand to margin-block
margin: ... 0 was zeroing margin-left/right, preventing WordPress's
inline alignment styles from taking effect on default/dots variants.

--- a/style.css
+++ b/style.css
@@ -2682,7 +2682,7 @@ hr,
 .wp-block-separator {
   border-style: solid;
   border-width: 2px 0 0;
-  margin: clamp(2rem, 3.5vw, 3rem) 0;
+  margin-block: clamp(2rem, 3.5vw, 3rem);
 }
 
 .wp-block-separator {
